fix: wrap in button

--- a/resources/css/ds.css
+++ b/resources/css/ds.css
@@ -11,7 +11,7 @@
 }
 
 .btn {
-    @apply rounded-xl hover:scale-[102%] duration-200 font-medium flex gap-2 whitespace-nowrap
+    @apply rounded-xl hover:scale-[102%] duration-200 font-medium flex gap-2 flex-nowrap
 }
 
 .btn-primary {
